# MiniML

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROFESSIONALIZE.md  README.md  TUTORIAL.md  linear regression.py  pyproject.toml  pyrightconfig.json  synthetic_studytime_examscore.csv
Case_Studies/breast_cancer_classification/: README.md  results.md  run_analysis.py
Case_Studies/house_prices/: README.md  results.md  run_analysis.py
demo/: app.py
docs/: api.md  architecture.md  index.md  installation.md
docs/math/: gradient_descent.md  linear_regression.md  logistic_regression.md  ridge_regression.md
docs/tutorials/: comparing_with_sklearn.md  getting_started.md  model_evaluation.md
examples/: classification_boundary.py  compare_with_sklearn.py  plot_loss_curves.py  polynomial_features_exp.py  quickstart_LinearRegression.py  quickstart_LogisticRegression.py  quickstart_RidgeRegression.py  quickstart_cross_validation.py  quickstart_grid_search.py  quickstart_knn_classifier.py  quickstart_knn_regressor.py  quickstart_log_reg.py  regularization_paths.py
miniml/: __init__.py
my_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: small_test.py  test_LinearRegression.py  test_LogisticRegression.py  test_RidgeRegression.py  test_cross_validation.py  test_elastic_net.py  test_grid_search.py  test_knn.py  test_lasso.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_missing_behaviors.py  test_polynomial_features.py  test_ridge_regression.py  test_scaler.py  test_sklearn_parity.py  test_split.py
(+19 files in other folders)
